# tap-thinkific

./: .gitignore  Dockerfile  README.md  logging.yml  meltano.yml  pyproject.toml  tox.ini
tap_thinkific/: __init__.py  __main__.py  client.py  streams.py  tap.py
tap_thinkific/schemas/: Courses.json  Enrollments.json
tap_thinkific/tests/: test_core.py
