[tool.poetry]
name = "tap-thinkific"
version = "0.0.1"
description = "`tap-thinkific` is a Singer tap for thinkific, built with the Meltano SDK for Singer Taps."
authors = ["Ben White"]
keywords = [
    "ELT",
    "thinkific",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.11"
requests = "^2.32.3"
singer-sdk = "^0.38.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_thinkific"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-thinkific = 'tap_thinkific.tap:Tapthinkific.cli'
